# zaobot

./: .env.dev  .gitignore  LICENSE  Pipfile  README.md  alembic.ini  bot.py  coolq.py  db.py  help.json  init.py  learn.py  pyproject.toml  requirement.txt  requirements.txt  run.sh  schema.sql  server.py  test_coolq.py  test_data.json  utils.py  zao.py
.github/ISSUE_TEMPLATE/: 功能需求.md  缺陷反馈.md
.github/workflows/: deploy.yml  pythonapp.yml
alembic/: env.py
bot/: context.py  db.py  directive.py  migration_tmp.sql  scheduled_tasks.py  schema.sql  server.py  utils.py
database/: __init__.py  admin.py  notice.py  record.py  util.py  zao.py
database/group/: admin.py  method.py  model.py
database/schedule/: admin.py  decorator.py  listen.py  method.py  model.py
database/weather/: admin.py  method.py  model.py
database/zao/: admin.py  method.py  model.py
plugins/caihongpi/: __init__.py  view.py
plugins/choyen/: generator.py  view.py
plugins/countdown/: __init__.py  data_source.py  view.py
plugins/daily60s/: data_source.py  task.py  view.py
plugins/fudu/: data_source.py  view.py
plugins/help/: __init__.py  view.py
plugins/hotsearch/: data_source.py  task.py  view.py  weibo_hot_search_sample.json
plugins/kaoyan/: data_source.py  ky_file~  view.py
plugins/olympic/: view.py
plugins/phlogo/: ph_logo.py  util.py  view.py
plugins/playwright/: __init__.py
plugins/record/: data_source.py  view.py
plugins/sendmessage/: __init__.py  task.py
tests/: conftest.py  test.json  test_coolq.py  test_data.json  test_settings.cfg  test_settings.toml
(+40 files in other folders)
